# AgenticBay

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE.md  MEMORY.md  Makefile  README.md  docker-compose.yml  start.sh
agents/: pyproject.toml
agents/agent_sdk/: app_factory.py  cli.py  huggingface.py  models.py  preflight.py
agents/research_agent/: .env.example  README.md
agents/research_agent/app/: agent.py
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  20260423_01_create_registered_agents.py  20260423_02_create_users_and_auth_sessions.py  20260423_03_add_email_auth_fields_to_users.py  20260425_04_add_auto_pay_fields_to_users.py  20260425_05_add_agent_health_fields.py  20260425_06_api_key_management.py  fbe02a9ce655_initial_schema.py
backend/app/: main.py
backend/app/agents/: base.py
backend/app/api/: deps.py
backend/app/auth/: __init__.py  jwt.py  otp_store.py  rate_limiter.py  session_manager.py  session_token.py
backend/app/core/: config.py  database.py  redis.py  security.py
backend/app/models/: __init__.py  agent.py  agents.py  analytics.py  api_keys.py  auth.py  auth_session.py  base.py  invoices.py  jobs.py  notifications.py  reviews.py  sessions.py  spending.py  user.py  users.py  wallets.py
backend/app/repositories/: __init__.py  agent_repo.py  api_key_repo.py  base.py  invoice_repo.py  job_repo.py  session_repo.py  spending_repo.py  user_repo.py  wallet_repo.py
backend/app/schemas/: agent.py  analytics.py  auth.py  marketplace.py
backend/app/services/: agent_analytics.py  agent_registry.py  agent_service.py  agent_validator.py  api_key_service.py  circle_client.py  email_service.py  escrow_wallet_service.py  health_client.py  invoice_service.py  marketplace_public.py  notification_service.py  (+5 more)
backend/tests/: conftest.py  test_agent_analytics.py  test_agent_registration.py  test_api_key_routes.py  test_auth_tokens.py  test_email_otp_auth.py  test_oauth_routes.py
(+294 files in other folders)
