[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sdk"
version = "0.1.0"
authors = [{ name = "AgenticBay", email = "okaforchidubem7@gmail.com" }]
description = "Shared FastAPI toolkit for agent services."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
]

[project.scripts]
create-agent = "agent_sdk.cli:main"
deploy-agent = "agent_sdk.deploy_cli:main"

[tool.setuptools.packages.find]
include = ["agent_sdk*"]
